tests/golden/errors/import_order.kso
import "std/json"
import "kanso-lang/vse"

main = print "hi"
