tests/golden/errors/import_order.stderr
error[formatting]: imports appear in alphabetical order
  --> import_order.kso:2:8
   2 | import "kanso-lang/vse"
              ^
